# backend/sportsbet_server/controllers/event_category_controller.py
@@ -4,6 +4,8 @@ import six
 from sportsbet_server.models import EventCategory  # noqa: E501
 from sportsbet_server import util
 
+def get_event_categories():
+    return {}
 def add_event_category():
     return {}
 def get_event_category_by_id(Id):
